--- a/P1 PROJECT.ipynb
+++ b/P1 PROJECT.ipynb
@@ -23,12 +23,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "'C:\\\\Users\\\\quayq\\\\dsc-phase-1-project'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,18 +48,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "title_basics_df = pd.read_csv(\"zippedData/imdb.title.basics.csv.gz\")\n",
     "title_ratings_df = pd.read_csv(\"zippedData/imdb.title.ratings.csv.gz\")\n",
-    "movie_gross_df = pd.read_csv(\"zippedData/bom.movie_gross.csv.gz\")"
+    "movie_gross_df = pd.read_csv(\"zippedData/bom.movie_gross.csv.gz\")\n",
+    "movie_budgets_df = pd.read_csv(\"zippedData/tn.movie_budgets.csv.gz\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['tconst', 'primary_title', 'original_title', 'start_year',\n",
+       "       'runtime_minutes', 'genres'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title_basics_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['tconst', 'averagerating', 'numvotes'], dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title_ratings_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['title', 'studio', 'domestic_gross', 'foreign_gross', 'year'], dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_gross_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'release_date', 'movie', 'production_budget', 'domestic_gross',\n",
+       "       'worldwide_gross'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_budgets_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Are there any missing information thats crucial to your data?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 146144 entries, 0 to 146143\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column           Non-Null Count   Dtype  \n",
+      "---  ------           --------------   -----  \n",
+      " 0   tconst           146144 non-null  object \n",
+      " 1   primary_title    146144 non-null  object \n",
+      " 2   original_title   146123 non-null  object \n",
+      " 3   start_year       146144 non-null  int64  \n",
+      " 4   runtime_minutes  114405 non-null  float64\n",
+      " 5   genres           140736 non-null  object \n",
+      "dtypes: float64(1), int64(1), object(4)\n",
+      "memory usage: 6.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "title_basics_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tconst             0.000000\n",
+       "primary_title      0.000000\n",
+       "original_title     0.000144\n",
+       "start_year         0.000000\n",
+       "runtime_minutes    0.217176\n",
+       "genres             0.037005\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title_basics_df.isna().sum()/len(title_basics_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -157,13 +306,98 @@
        "4        2017             80.0  Comedy,Drama,Fantasy  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "title_basics_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#So far only two dfs are missing data. For title_basics_df, I'm missing about 20% of data.\n",
+    "#For now I'm going to drop the data for it's not crucial to my data analysis\n",
+    "#For generes I'm going to "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tconst           0\n",
+       "averagerating    0\n",
+       "numvotes         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title_ratings_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                   0\n",
+       "release_date         0\n",
+       "movie                0\n",
+       "production_budget    0\n",
+       "domestic_gross       0\n",
+       "worldwide_gross      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_budgets.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title                0\n",
+       "studio               5\n",
+       "domestic_gross      28\n",
+       "foreign_gross     1350\n",
+       "year                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_gross_df.isna().sum()"
    ]
   },
   {
